<resources>
	<string name="app_name">UTube</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="title_home">Home</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifications</string>
	<string name="title_history">History</string>
	<string name="select_country">Select your country</string>
	<string name="reason_to_select">It will help to show relevant content</string>
	<string name="usa">United State of America</string>
	<string name="next">next</string>

	<string-array name="countries">
		<item> Algeria</item>
		<item> Argentina</item>
		<item> Australia</item>
		<item> Austria</item>
		<item> Azerbaijan</item>
		<item> Bahrain</item>
		<item> Belarus</item>
		<item> Belgium</item>
		<item> Bosnia and Herzegovina</item>
		<item> Brazil</item>
		<item> Bulgaria</item>
		<item> Canada</item>
		<item> Chile</item>
		<item> Colombia</item>
		<item> Croatia</item>
		<item> Czechia</item>
		<item> Denmark</item>
		<item> Egypt</item>
		<item> Estonia</item>
		<item> Finland</item>
		<item> France</item>
		<item> Georgia</item>
		<item> Germany</item>
		<item> Ghana</item>
		<item> Greece</item>
		<item> Hong Kong</item>
		<item> Hungary</item>
		<item> Iceland</item>
		<item> India</item>
		<item> Indonesia</item>
		<item> Iraq</item>
		<item> Ireland</item>
		<item> Israel</item>
		<item> Italy</item>
		<item> Jamaica</item>
		<item> Japan</item>
		<item> Jordan</item>
		<item> Kazakhstan</item>
		<item> Kenya</item>
		<item> Kuwait</item>
		<item> Latvia</item>
		<item> Lebanon</item>
		<item> Libya</item>
		<item> Lithuania</item>
		<item> Luxembourg</item>
		<item> Macedonia</item>
		<item> Malaysia</item>
		<item> Mexico</item>
		<item> Montenegro</item>
		<item> Morocco</item>
		<item> Nepal</item>
		<item> Netherlands</item>
		<item> New Zealand</item>
		<item> Nigeria</item>
		<item> Norway</item>
		<item> Oman</item>
		<item> Pakistan</item>
		<item> Peru</item>
		<item> Philippines</item>
		<item> Poland</item>
		<item> Portugal</item>
		<item> Puerto Rico</item>
		<item> Qatar</item>
		<item> Romania</item>
		<item> Russia</item>
		<item> Saudi Arabia</item>
		<item> Senegal</item>
		<item> Serbia</item>
		<item> Singapore</item>
		<item> Slovakia</item>
		<item> Slovenia</item>
		<item> South Africa</item>
		<item> South Korea</item>
		<item> Spain</item>
		<item> Sri Lanka</item>
		<item> Sweden</item>
		<item> Switzerland</item>
		<item> Taiwan</item>
		<item> Tanzania</item>
		<item> Thailand</item>
		<item> Tunisia</item>
		<item> Turkey</item>
		<item> Uganda</item>
		<item> Ukraine</item>
		<item> United Arab Emirates</item>
		<item> United Kingdom</item>
		<item> United States</item>
		<item> Vietnam</item>
		<item> Yemen</item>
		<item> Zimbabwe</item>
	</string-array>

	<integer-array name="countries_flags">
		<item>@drawable/algeria</item>
		<item>@drawable/argentina</item>
		<item>@drawable/australia</item>
		<item>@drawable/austria</item>
		<item>@drawable/azerbaijan</item>
		<item>@drawable/bahrain</item>
		<item>@drawable/belarus</item>
		<item>@drawable/belgium</item>
		<item>@drawable/bosnia_and_herzegovina</item>
		<item>@drawable/brazil</item>
		<item>@drawable/bulgaria</item>
		<item>@drawable/canada</item>
		<item>@drawable/chile</item>
		<item>@drawable/colombia</item>
		<item>@drawable/croatia</item>
		<item>@drawable/czech_republic</item>
		<item>@drawable/denmark</item>
		<item>@drawable/egypt</item>
		<item>@drawable/estonia</item>
		<item>@drawable/finland</item>
		<item>@drawable/france</item>
		<item>@drawable/georgia</item>
		<item>@drawable/germany</item>
		<item>@drawable/ghana</item>
		<item>@drawable/greece</item>
		<item>@drawable/hong_kong</item>
		<item>@drawable/hungary</item>
		<item>@drawable/iceland</item>
		<item>@drawable/india</item>
		<item>@drawable/indonesia</item>
		<item>@drawable/iraq</item>
		<item>@drawable/ireland</item>
		<item>@drawable/israel</item>
		<item>@drawable/italy</item>
		<item>@drawable/jamaica</item>
		<item>@drawable/japan</item>
		<item>@drawable/jordan</item>
		<item>@drawable/kazakhstan</item>
		<item>@drawable/kenya</item>
		<item>@drawable/kuwait</item>
		<item>@drawable/latvia</item>
		<item>@drawable/lebanon</item>
		<item>@drawable/libya</item>
		<item>@drawable/lithuania</item>
		<item>@drawable/luxembourg</item>
		<!--<item>@drawable/macedonia</item>-->
		<item>@drawable/malaysia</item>
		<item>@drawable/mexico</item>
		<item>@drawable/montenegro</item>
		<item>@drawable/morocco</item>
		<item>@drawable/nepal</item>
		<item>@drawable/netherlands</item>
		<item>@drawable/new_zealand</item>
		<item>@drawable/nigeria</item>
		<item>@drawable/norway</item>
		<item>@drawable/oman</item>
		<item>@drawable/pakistan</item>
		<item>@drawable/peru</item>
		<item>@drawable/philippines</item>
		<!--<item>@drawable/poland</item>-->
		<item>@drawable/portugal</item>
		<item>@drawable/puerto_rico</item>
		<item>@drawable/qatar</item>
		<item>@drawable/romania</item>
		<item>@drawable/russia</item>
		<item>@drawable/saudi_arabia</item>
		<item>@drawable/senegal</item>
		<item>@drawable/serbia</item>
		<item>@drawable/singapore</item>
		<item>@drawable/slovakia</item>
		<item>@drawable/slovenia</item>
		<item>@drawable/south_africa</item>
		<item>@drawable/south_korea</item>
		<item>@drawable/spain</item>
		<item>@drawable/sri_lanka</item>
		<item>@drawable/sweden</item>
		<item>@drawable/switzerland</item>
		<item>@drawable/taiwan</item>
		<item>@drawable/tanzania</item>
		<item>@drawable/thailand</item>
		<item>@drawable/tunisia</item>
		<item>@drawable/turkey</item>
		<item>@drawable/uganda</item>
		<item>@drawable/ukraine</item>
		<item>@drawable/united_arab_emirates</item>
		<item>@drawable/united_kingdom</item>
		<item>@drawable/united_states_of_america</item>
		<item>@drawable/vietnam</item>
		<item>@drawable/yemen</item>
		<item>@drawable/zimbabwe</item>
	</integer-array>
	<string name="title_activity_main2">Main2Activity</string>
	<string name="settings">Settings</string>
	<string name="title_search">Search</string>
	<string name="title_favorite">Favorite</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="top_100">TOP 100</string>
	<string name="trending">TRENDING</string>
	<string name="recommended">RECOMMENDED</string>
	<string name="failed_playback">Playback Failed</string>
</resources>
