<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  tools:context=".HomeFragment">

	<LinearLayout
		android:id="@+id/top_100"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/border_bottom"
		android:clickable="true"
		android:onClick="onClickHomeCategory"
		android:orientation="horizontal"
		android:padding="16dp"
		android:weightSum="2"
		tools:ignore="OnClick">

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/trophy"/>
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/top_100"
				android:textSize="18sp"
				android:textStyle="bold"/>
		</RelativeLayout>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/trending"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/border_bottom"
		android:clickable="true"
		android:onClick="onClickHomeCategory"
		android:orientation="horizontal"
		android:padding="16dp"
		android:weightSum="2"
		tools:ignore="OnClick">

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/trending"
				android:textSize="18sp"
				android:textStyle="bold"/>
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/trend"/>
		</RelativeLayout>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/recommended"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/border_bottom"
		android:clickable="true"
		android:onClick="onClickHomeCategory"
		android:orientation="horizontal"
		android:padding="16dp"
		android:weightSum="2"
		tools:ignore="OnClick">

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/thumbs_up"/>
		</RelativeLayout>

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/recommended"
				android:textSize="18sp"
				android:textStyle="bold"/>
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>